[package]
name = "app112"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cstr_core = "0.2.6"
embedded-graphics = "0.7.1"
embedded-graphics-simulator = "0.4.1"
log = "0.4.17"
log4rs = "1.2.0"
lvgl = { git = "https://github.com/lvgl/lv_binding_rust/", branch = "master", version = "0.6.2" }
lvgl-sys = { git = "https://github.com/lvgl/lv_binding_rust/", branch = "master", version = "0.6.2" }
